# myautoml

./: README.md  pyproject.toml
myautoml/: __init__.py
myautoml/core/: __init__.py  _fitter_utils.py  fitter.py  fitter_utils.py  scoring.py
myautoml/datasets/: basic.py
myautoml/estimators/: __init__.py  features.py  torch_embeddings.py  torch_models.py  utility.py  weighted_ensemble.py
myautoml/metrics/: scoring.py
myautoml/polars_transformers/: __init__.py  auto_encoder.py  bases.py  chain.py  impute.py  infrequent.py  one_hot.py  ordinal.py  scale.py  select.py  tonumpy.py
myautoml/utils/: joblib_tools.py  logger.py  nn_utils.py  numpy_utils.py  polars_utils.py  python_utils.py  rng.py  torch_utils.py
tests/: test_polars_utils.py
tests/preprocessing/: test_impute.py  test_infrequent.py  test_one_hot.py  test_ordinal.py  test_scale.py  test_select.py
